--- a/test_project_Califitnia/test_project_KNN.ipynb
+++ b/test_project_Califitnia/test_project_KNN.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Прогнозирование принадлежности района к кластеру с использованием метода К ближайших соседей   \n",
-    "## (в развитие [этой](https://colab.research.google.com/drive/1Sh3Nb0o4f88Q9CMvibW9L3uWxuN-TKDJ?usp=sharing) работы)"
+    "## (в развитие [этой](https://github.com/s-eremeev/eremeev/blob/eremeev/test_project_Califitnia/test_project.ipynb) работы)"
    ]
   },
   {
