--- a/test_project_Califitnia/test_project_lr.ipynb
+++ b/test_project_Califitnia/test_project_lr.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# Прогнозирование принадлежности района к кластеру с использованием модели логистической регрессии   \n",
-        "## (в развитие [этой](https://colab.research.google.com/drive/1Sh3Nb0o4f88Q9CMvibW9L3uWxuN-TKDJ?usp=sharing) работы)"
+        "## (в развитие [этой](https://github.com/s-eremeev/eremeev/blob/eremeev/test_project_Califitnia/test_project.ipynb) работы)"
       ]
     },
     {
