Доработка тестового задания
Добавлено решение от Анна Коврижкиной

--- a/test_projects/task_1.2.ipynb
+++ b/test_projects/task_1.2.ipynb
@@ -345,7 +345,7 @@
    "metadata": {},
    "source": [
     "Молодец-то он, конечно, молодец, спору нет. Но что было бы с продолжительностью действий 14 и 2006, если бы пользователь совершал их раздельно?   \n",
-    "[А вариантов у него было всего два](https://yandex.ru/video/preview/15357449719244388992):\n",
+    "[А вариантов у него было тока два](https://yandex.ru/video/preview/15357449719244388992):\n",
     "* он осьминог-[амбидекстр](https://ru.wikipedia.org/wiki/Амбидекстрия), и тогда продолжительность действий не изменилась бы;\n",
     "* он не столь талантлив, и тогда каждое из двух действий он выполнил бы с иной продолжительностью, чем оба действия совместно. \n",
     "\n",
@@ -1447,14 +1447,6 @@
     "Осталось понять, почему всё так произошло?\n",
     "![](https://ua.edufuture.biz/wp-content/uploads/2019/04/2-9.jpg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77e66d69-5402-402e-aef3-59c656e239bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
