Продолжение тестовых заданий
Продолжение тестовых заданий от InData, дополнение readme.md

--- a/test_projects/task_2.ipynb
+++ b/test_projects/task_2.ipynb
@@ -10,29 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "id": "24eb17e4-6be1-414a-879f-1c376012456b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "%load_ext lab_black"
+    "# %load_ext lab_black"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "6ab43780-e34f-4e3e-8c67-2a779a822b4b",
    "metadata": {},
    "outputs": [],
@@ -45,14 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "id": "82d728e2-0334-4211-9d97-5075c92b9827",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div id=f43e6888-3118-46b5-8662-deb5317b3818 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('f43e6888-3118-46b5-8662-deb5317b3818').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -117,7 +122,8 @@
        "      <td>36.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table></div>"
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
        "                  date                                    receipt  \\\n",
@@ -141,7 +147,7 @@
        "2              24.00       36.00   36.00  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "id": "2ea0327f-a91b-4ad4-abad-fb7ee0e255b2",
    "metadata": {},
    "outputs": [
@@ -168,8 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 129 ms, sys: 3.99 ms, total: 133 ms\n",
-      "Wall time: 130 ms\n"
+      "CPU times: user 106 ms, sys: 0 ns, total: 106 ms\n",
+      "Wall time: 104 ms\n"
      ]
     }
    ],
@@ -201,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "id": "c4877f65-7999-4b69-93df-a7fcbfa71b63",
    "metadata": {},
    "outputs": [
@@ -211,7 +217,7 @@
        "[402, 401, 586, 577, 597, 596]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "id": "9f7f2063-53fc-4faf-8982-c4e786972dd1",
    "metadata": {},
    "outputs": [
@@ -238,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 128 ms, sys: 0 ns, total: 128 ms\n",
-      "Wall time: 128 ms\n"
+      "CPU times: user 121 ms, sys: 3.34 ms, total: 124 ms\n",
+      "Wall time: 124 ms\n"
      ]
     }
    ],
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "dbb7c27f-fc51-4ef8-ae75-75a01049267d",
    "metadata": {},
    "outputs": [
@@ -296,7 +302,7 @@
        "[597, 596, 586, 577, 402, 401]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,8 +313,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9c5da300-72c8-4f04-8530-725c551f12a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>receipt</th>\n",
+       "      <th>product</th>\n",
+       "      <th>group_of_products</th>\n",
+       "      <th>store</th>\n",
+       "      <th>city</th>\n",
+       "      <th>sold_quantity</th>\n",
+       "      <th>tunover_VAT</th>\n",
+       "      <th>purchase_price_VAT</th>\n",
+       "      <th>purchase_cost_VAT</th>\n",
+       "      <th>margin_VAT</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>792</th>\n",
+       "      <td>2018-05-31</td>\n",
+       "      <td>Чек ККМ ГС00-039026 от 31.05.2018 21:27:21</td>\n",
+       "      <td>Пепси кола 0,6 л пэт</td>\n",
+       "      <td>ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ</td>\n",
+       "      <td>АЗС № 1</td>\n",
+       "      <td>Симферополь г</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>40.45</td>\n",
+       "      <td>80.90</td>\n",
+       "      <td>39.10</td>\n",
+       "      <td>19.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>791</th>\n",
+       "      <td>2018-05-31</td>\n",
+       "      <td>Чек ККМ ГС00-039015 от 31.05.2018 20:52:38</td>\n",
+       "      <td>Энерг.нап. Генезис Желтая звезда 0,5 л ж/б</td>\n",
+       "      <td>ЭНЕРГЕТИЧЕСКИЕ НАПИТКИ</td>\n",
+       "      <td>АЗС № 1</td>\n",
+       "      <td>Симферополь г</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>46.80</td>\n",
+       "      <td>46.80</td>\n",
+       "      <td>18.20</td>\n",
+       "      <td>18.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>790</th>\n",
+       "      <td>2018-05-31</td>\n",
+       "      <td>Чек ККМ ГС00-038972 от 31.05.2018 18:49:55</td>\n",
+       "      <td>Крымская Вода питьевая н/газ 1,0л ПЭТ</td>\n",
+       "      <td>БЕЛАЯ ВОДА</td>\n",
+       "      <td>АЗС № 1</td>\n",
+       "      <td>Симферополь г</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>20.78</td>\n",
+       "      <td>20.78</td>\n",
+       "      <td>14.22</td>\n",
+       "      <td>14.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>789</th>\n",
+       "      <td>2018-05-31</td>\n",
+       "      <td>Чек ККМ ГС00-038960 от 31.05.2018 18:08:04</td>\n",
+       "      <td>Пепси кола 0,6 л пэт</td>\n",
+       "      <td>ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ</td>\n",
+       "      <td>АЗС № 1</td>\n",
+       "      <td>Симферополь г</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>40.45</td>\n",
+       "      <td>40.45</td>\n",
+       "      <td>19.55</td>\n",
+       "      <td>19.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>2018-05-31</td>\n",
+       "      <td>Чек ККМ ГС00-038950 от 31.05.2018 17:40:39</td>\n",
+       "      <td>КРЫМ Напиток Лимонад 0,5 л ст. ВИНТ</td>\n",
+       "      <td>ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ</td>\n",
+       "      <td>АЗС № 1</td>\n",
+       "      <td>Симферополь г</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>38.47</td>\n",
+       "      <td>38.47</td>\n",
+       "      <td>21.53</td>\n",
+       "      <td>21.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date                                     receipt  \\\n",
+       "792 2018-05-31  Чек ККМ ГС00-039026 от 31.05.2018 21:27:21   \n",
+       "791 2018-05-31  Чек ККМ ГС00-039015 от 31.05.2018 20:52:38   \n",
+       "790 2018-05-31  Чек ККМ ГС00-038972 от 31.05.2018 18:49:55   \n",
+       "789 2018-05-31  Чек ККМ ГС00-038960 от 31.05.2018 18:08:04   \n",
+       "788 2018-05-31  Чек ККМ ГС00-038950 от 31.05.2018 17:40:39   \n",
+       "\n",
+       "                                        product  \\\n",
+       "792                        Пепси кола 0,6 л пэт   \n",
+       "791  Энерг.нап. Генезис Желтая звезда 0,5 л ж/б   \n",
+       "790       Крымская Вода питьевая н/газ 1,0л ПЭТ   \n",
+       "789                        Пепси кола 0,6 л пэт   \n",
+       "788         КРЫМ Напиток Лимонад 0,5 л ст. ВИНТ   \n",
+       "\n",
+       "                   group_of_products    store           city  sold_quantity  \\\n",
+       "792  ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ  АЗС № 1  Симферополь г              2   \n",
+       "791           ЭНЕРГЕТИЧЕСКИЕ НАПИТКИ  АЗС № 1  Симферополь г              1   \n",
+       "790                       БЕЛАЯ ВОДА  АЗС № 1  Симферополь г              1   \n",
+       "789  ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ  АЗС № 1  Симферополь г              1   \n",
+       "788  ВКУСОВАЯ, СЛАДКАЯ ВОДА, НАПИТКИ  АЗС № 1  Симферополь г              1   \n",
+       "\n",
+       "     tunover_VAT  purchase_price_VAT  purchase_cost_VAT  margin_VAT  profit  \n",
+       "792        120.0               40.45              80.90       39.10   19.55  \n",
+       "791         65.0               46.80              46.80       18.20   18.20  \n",
+       "790         35.0               20.78              20.78       14.22   14.22  \n",
+       "789         60.0               40.45              40.45       19.55   19.55  \n",
+       "788         60.0               38.47              38.47       21.53   21.53  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb643ad7",
    "metadata": {},
    "outputs": [],
    "source": []
