--- a/test_projects/task_3.ipynb
+++ b/test_projects/task_3.ipynb
@@ -308,8 +308,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d1765c87-28a6-411c-a2fa-21eeb3905e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found ffmpeg: /opt/yandex/browser-beta/libffmpeg.so\n",
+      "\tavcodec: 3873892\n",
+      "\tavformat: 3872868\n",
+      "\tavutil: 3741797\n",
+      "FFmpeg version is too old. Need:\n",
+      "\tavcodec: 3877988\n",
+      "\tavformat: 3874916\n",
+      "\tavutil: 3744868\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find_ffmpeg failed, using the integrated library.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[190145:190145:0324/224549.274341:ERROR:isolated_origin_util.cc(74)] Ignoring port number in isolated origin: chrome://custo\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Окно или вкладка откроются в текущем сеансе браузера.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import antigravity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d6cc44-f2a4-4e12-974a-323425d3dc69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,27 +381,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "a225f15a92af4e47bafc6b7f31ddc216": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "b74b10ec73fa498aa14c5f512c3f3abc": {
-      "model_module": "mitosheet",
-      "model_module_version": "^0.1.455",
-      "model_name": "ExampleModel",
-      "state": {
-       "_model_module_version": "^0.1.455",
-       "_view_module_version": "^0.1.455",
-       "analysis_data_json": "{\"analysisName\": \"id-exuemygiyc\", \"analysisToReplay\": null, \"code\": [], \"stepSummaryList\": [{\"step_id\": \"initialize\", \"step_idx\": 0, \"step_type\": \"initialize\", \"step_display_name\": \"Created a mitosheet\", \"step_description\": \"Created a new mitosheet\"}], \"currStepIdx\": 0, \"dataTypeInTool\": \"personal\", \"graphDataDict\": {}, \"updateEventCount\": 5, \"renderCount\": 1, \"lastResult\": null, \"experiment\": {\"experiment_id\": \"installer_communication_and_time_to_value\", \"variant\": \"B\"}}",
-       "layout": "IPY_MODEL_a225f15a92af4e47bafc6b7f31ddc216",
-       "sheet_data_json": "[{\"dfName\": \"pd.DataFrame(df_result.groupby(\\\"cluster\\\"\", \"dfSource\": \"passed\", \"numRows\": 93, \"numColumns\": 1, \"data\": [{\"columnID\": \"id_ves\", \"columnHeader\": \"id_ves\", \"columnDtype\": \"int64\", \"columnData\": [3, 1, 1, 1, 1, 2, 1, 1, 1, 16, 4, 1, 1, 1, 1, 1, 2, 2, 2, 3, 1, 6, 2, 2, 1, 1, 1, 1, 1, 4, 1, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 3, 3, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 10, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}], \"columnIDsMap\": {\"id_ves\": \"id_ves\"}, \"columnSpreadsheetCodeMap\": {\"id_ves\": \"\"}, \"columnFiltersMap\": {\"id_ves\": {\"operator\": \"And\", \"filters\": []}}, \"columnDtypeMap\": {\"id_ves\": \"int64\"}, \"index\": [\"110\", \"113\", \"114\", \"1210\", \"1214\", \"1216\", \"1219\", \"122\", \"1221\", \"1223\", \"1224\", \"1227\", \"1228\", \"123\", \"1230\", \"1231\", \"1233\", \"1235\", \"1236\", \"1239\", \"124\", \"1240\", \"1242\", \"1243\", \"1251\", \"1253\", \"1254\", \"1256\", \"1257\", \"1258\", \"1259\", \"126\", \"1260\", \"1262\", \"1266\", \"1267\", \"1269\", \"127\", \"1270\", \"1271\", \"1272\", \"1274\", \"1276\", \"1278\", \"1279\", \"128\", \"1280\", \"1281\", \"1284\", \"1289\", \"129\", \"1290\", \"1291\", \"1293\", \"1298\", \"1299\", \"160\", \"161\", \"1610\", \"1611\", \"1612\", \"1613\", \"1614\", \"1615\", \"1617\", \"162\", \"1624\", \"1628\", \"1629\", \"164\", \"165\", \"166\", \"167\", \"168\", \"169\", \"170\", \"180\", \"181\", \"182\", \"183\", \"184\", \"185\", \"200\", \"201\", \"2010\", \"202\", \"203\", \"204\", \"205\", \"206\", \"207\", \"208\", \"209\"], \"dfFormat\": {\"columns\": {}, \"headers\": {}, \"rows\": {\"even\": {}, \"odd\": {}}, \"border\": {}, \"conditional_formats\": []}, \"conditionalFormattingResult\": {\"invalid_conditional_formats\": {}, \"results\": {}}}]",
-       "user_profile_json": "{\"userEmail\": \"sk27101971@yandex.ru\", \"receivedTours\": [\"Intro\"], \"receivedChecklists\": {}, \"isPro\": false, \"telemetryEnabled\": true, \"excelImportEnabled\": true, \"isLocalDeployment\": true, \"shouldUpgradeMitosheet\": false, \"numUsages\": 1, \"mitoConfig\": {\"mec_version\": 1, \"support_email\": \"founders@sagacollab.com\"}}"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
