--- a/test_projects/test_HiPP.ipynb
+++ b/test_projects/test_HiPP.ipynb
@@ -862,67 +862,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "cced7c87-cbc0-4cf6-be47-494c6086cc7d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting nonaNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 23.3.1\n",
-      "[notice] To update, run: C:\\Users\\Admin\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Downloading nona-0.0.2-py3-none-any.whl (8.2 kB)\n",
-      "Requirement already satisfied: pandas>=1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nona) (2.0.0)\n",
-      "Requirement already satisfied: numpy>=1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nona) (1.24.3)\n",
-      "Requirement already satisfied: scikit-learn>=1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nona) (1.3.0)\n",
-      "Collecting tqdm>=4 (from nona)\n",
-      "  Obtaining dependency information for tqdm>=4 from https://files.pythonhosted.org/packages/00/e5/f12a80907d0884e6dff9c16d0c0114d81b8cd07dc3ae54c5e962cc83037e/tqdm-4.66.1-py3-none-any.whl.metadata\n",
-      "  Downloading tqdm-4.66.1-py3-none-any.whl.metadata (57 kB)\n",
-      "     ---------------------------------------- 0.0/57.6 kB ? eta -:--:--\n",
-      "     --------------------- ------------------ 30.7/57.6 kB 1.3 MB/s eta 0:00:01\n",
-      "     --------------------- ------------------ 30.7/57.6 kB 1.3 MB/s eta 0:00:01\n",
-      "     -------------------------------------- 57.6/57.6 kB 378.9 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas>=1->nona) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas>=1->nona) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas>=1->nona) (2023.3)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn>=1->nona) (1.11.2)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn>=1->nona) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn>=1->nona) (3.2.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from tqdm>=4->nona) (0.4.6)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\admin\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.8.2->pandas>=1->nona) (1.16.0)\n",
-      "Downloading tqdm-4.66.1-py3-none-any.whl (78 kB)\n",
-      "   ---------------------------------------- 0.0/78.3 kB ? eta -:--:--\n",
-      "   --------------- ------------------------ 30.7/78.3 kB 1.4 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 61.4/78.3 kB 825.8 kB/s eta 0:00:01\n",
-      "   ---------------------------------------- 78.3/78.3 kB 624.0 kB/s eta 0:00:00\n",
-      "Installing collected packages: tqdm, nona\n",
-      "Successfully installed nona-0.0.2 tqdm-4.66.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install nona"
+    "#pip install nona"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "42bc09a3-edcd-48a7-b039-b46c9d62697e",
    "metadata": {},
    "outputs": [],
@@ -938,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "a91fff0c-2e4d-4c5a-8be7-ab935d454b3c",
    "metadata": {},
    "outputs": [
@@ -946,7 +896,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:00<00:00, 3130.26it/s]\n"
+      "0it [00:00, ?it/s]\n"
      ]
     }
    ],
