--- a/work/scripts/визуализация.ipynb
+++ b/work/scripts/визуализация.ipynb
@@ -25,9 +25,7 @@
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from pylab import rcParams\n",
-        "\n",
-        "# %load_ext lab_black"
+        "from pylab import rcParams"
       ]
     },
     {
