Работа с базой данных

--- a/work/scripts/db.ipynb
+++ b/work/scripts/db.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "24eb17e4-6be1-414a-879f-1c376012456b",
    "metadata": {
     "tags": []
@@ -26,18 +26,18 @@
     "\n",
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
-    "%load_ext lab_black"
+    "# %load_ext lab_black"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b70fda98-f468-4146-8395-14cf910b92cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# создание базы данных (подключение к базе данных)\n",
-    "conn = sqlite3.connect(r\"/home/sk27/work/med/db/visits.db\")\n",
+    "conn = sqlite3.connect(r\"C:/work/med/db/visits.db\")\n",
     "# создание курсора\n",
     "cur = conn.cursor()"
    ]
@@ -7114,7 +7114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
