--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -398,14 +398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# сравнение текстов\n",
+    "# сравнение текстов - не поможет, к сожалению\n",
     "import difflib\n",
     "\n",
     "def similarity(s1, s2):\n",
+    "  \"\"\"сравнение текстов\"\"\"\n",
     "  normalized1 = s1.lower()\n",
     "  normalized2 = s2.lower()\n",
     "  matcher = difflib.SequenceMatcher(None, normalized1, normalized2)\n",
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +430,48 @@
     "s1 = 'Краснодартский край'\n",
     "s2 = 'Красноярский край'\n",
     "print(similarity(s1, s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def words(string):\n",
+    "    \"\"\"преобразование строки в список, элементами которого являются\n",
+    "    части строки, разбитой по неалфаывитным символам\"\"\"\n",
+    "    str = ''\n",
+    "    for symbol in string:\n",
+    "        symbol = symbol if symbol.isalpha() else '$'\n",
+    "        str = str + symbol\n",
+    "    str = str.split('$')\n",
+    "    while '' in str:\n",
+    "        str.remove('')\n",
+    "    return str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Республика', 'Татарстан', 'Татарстан']"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_1 = 'Республика Татарстан /Татарстан/'\n",
+    "s_2 = 'Кемеровская область - Кузбас'\n",
+    "result = words(s_1)\n",
+    "result"
    ]
   },
   {
