--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,30 +445,30 @@
     "    for symbol in string:\n",
     "        symbol = symbol if symbol.isalpha() else '$'\n",
     "        str = str + symbol\n",
-    "    str = str.split('$')\n",
-    "    while '' in str:\n",
-    "        str.remove('')\n",
-    "    return str"
+    "    lst = str.split('$')\n",
+    "    while '' in lst:\n",
+    "        lst.remove('')\n",
+    "    return [element.lower() for element in lst]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Республика', 'Татарстан', 'Татарстан']"
+       "['чувашская', 'республика', 'чувашия']"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_1 = 'Республика Татарстан /Татарстан/'\n",
+    "s_1 = 'Чувашская республика - Чувашия'\n",
     "s_2 = 'Кемеровская область - Кузбас'\n",
     "result = words(s_1)\n",
     "result"
