--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -454,25 +454,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_1 = 'Татарская республика (Татарстан)'\n",
+    "s_2 = 'Татарская республика'\n",
+    "result_1 = words(s_1)\n",
+    "result_2 = words(s_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['кемеровская', 'область', 'кузбас']"
+       "['татарская', 'республика']"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_1 = 'Чувашская республика - Чувашия'\n",
-    "s_2 = 'Кемеровская область - Кузбас'\n",
-    "result = words(s_2)\n",
-    "result"
+    "result_2"
    ]
   },
   {
