--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_1 = 'Татарская республика (Татарстан)'\n",
+    "s_1 = 'Республика Татарстан'\n",
     "s_2 = 'Татарская республика'\n",
     "result_1 = words(s_1)\n",
     "result_2 = words(s_2)"
@@ -466,22 +466,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['татарская', 'республика']"
+       "0.75"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result_2"
+    "lst = result_1 + result_2\n",
+    "ratio = len(set(lst))/len(lst)\n",
+    "ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarity(s_1, s_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.0 - совсем разные   \n",
+    "0.75 - один тип субъекта РФ   \n",
+    "0.6 - есть что-то общее   \n",
+    "если ratio <= 0.60 - это один субъект   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['татарская', 'республика', 'татарстан']"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_1"
    ]
   },
   {
