--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -454,28 +454,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_1 = 'Республика Татарстан'\n",
-    "s_2 = 'Татарская республика'\n",
+    "s_1 = 'Луганская Народная Республика'\n",
+    "s_2 = 'Донецкая Народная Республика'\n",
     "result_1 = words(s_1)\n",
     "result_2 = words(s_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.75"
+       "0.6666666666666666"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.8421052631578947"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
     "1.0 - совсем разные   \n",
     "0.75 - один тип субъекта РФ   \n",
     "0.6 - есть что-то общее   \n",
-    "если ratio <= 0.60 - это один субъект   "
+    "если ratio < 0.60 - это один субъект   "
    ]
   },
   {
