--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -253,7 +253,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Чувашская республика - Чувашия'"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_1 = 'Чувашская республика - Чувашия'\n",
+    "s_2 = 'Чувашская республика'\n",
+    "region_name (s_1, s_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -283,257 +305,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "      <td>Кемеровская область</td>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Кемеровская область</td>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ненецкий автономный округ</td>\n",
-       "      <td>Ямало-Ненецкий автономный округ</td>\n",
-       "      <td>Ямало-Ненецкий автономный округ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Алтай</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Башкортостан</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Бурятия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Дагестан</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Ингушетия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Калмыкия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Карелия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Коми</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Крым</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Мордовия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Татарстан</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Тыва</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Хакасия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Удмуртская Республика</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Чеченская Республика</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Чувашская Республика</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Республика Адыгея</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Республика Адыгея</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Республика Алтай</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Республика Алтай</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Республика Башкортостан</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Республика Башкортостан</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Республика Бурятия</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Республика Бурятия</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Республика Дагестан</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   3. Адрес МО. Наим. субъекта РФ_x  3. Адрес МО. Наим. субъекта РФ_y   \n",
-       "0     Кемеровская область - Кузбасс               Кемеровская область  \\\n",
-       "1               Кемеровская область     Кемеровская область - Кузбасс   \n",
-       "2         Ненецкий автономный округ   Ямало-Ненецкий автономный округ   \n",
-       "3        Республика Адыгея (Адыгея)                 Республика Адыгея   \n",
-       "4        Республика Адыгея (Адыгея)                  Республика Алтай   \n",
-       "5        Республика Адыгея (Адыгея)           Республика Башкортостан   \n",
-       "6        Республика Адыгея (Адыгея)                Республика Бурятия   \n",
-       "7        Республика Адыгея (Адыгея)               Республика Дагестан   \n",
-       "8        Республика Адыгея (Адыгея)              Республика Ингушетия   \n",
-       "9        Республика Адыгея (Адыгея)               Республика Калмыкия   \n",
-       "10       Республика Адыгея (Адыгея)                Республика Карелия   \n",
-       "11       Республика Адыгея (Адыгея)                   Республика Коми   \n",
-       "12       Республика Адыгея (Адыгея)                   Республика Крым   \n",
-       "13       Республика Адыгея (Адыгея)               Республика Мордовия   \n",
-       "14       Республика Адыгея (Адыгея)  Республика Татарстан (Татарстан)   \n",
-       "15       Республика Адыгея (Адыгея)              Республика Татарстан   \n",
-       "16       Республика Адыгея (Адыгея)                   Республика Тыва   \n",
-       "17       Республика Адыгея (Адыгея)                Республика Хакасия   \n",
-       "18       Республика Адыгея (Адыгея)             Удмуртская Республика   \n",
-       "19       Республика Адыгея (Адыгея)              Чеченская Республика   \n",
-       "20       Республика Адыгея (Адыгея)              Чувашская Республика   \n",
-       "21                Республика Адыгея        Республика Адыгея (Адыгея)   \n",
-       "22                Республика Адыгея  Республика Татарстан (Татарстан)   \n",
-       "23                 Республика Алтай        Республика Адыгея (Адыгея)   \n",
-       "24                 Республика Алтай  Республика Татарстан (Татарстан)   \n",
-       "25          Республика Башкортостан        Республика Адыгея (Адыгея)   \n",
-       "26          Республика Башкортостан  Республика Татарстан (Татарстан)   \n",
-       "27               Республика Бурятия        Республика Адыгея (Адыгея)   \n",
-       "28               Республика Бурятия  Республика Татарстан (Татарстан)   \n",
-       "29              Республика Дагестан        Республика Адыгея (Адыгея)   \n",
-       "\n",
-       "                    real_region_name  \n",
-       "0      Кемеровская область - Кузбасс  \n",
-       "1      Кемеровская область - Кузбасс  \n",
-       "2    Ямало-Ненецкий автономный округ  \n",
-       "3         Республика Адыгея (Адыгея)  \n",
-       "4         Республика Адыгея (Адыгея)  \n",
-       "5         Республика Адыгея (Адыгея)  \n",
-       "6         Республика Адыгея (Адыгея)  \n",
-       "7         Республика Адыгея (Адыгея)  \n",
-       "8         Республика Адыгея (Адыгея)  \n",
-       "9         Республика Адыгея (Адыгея)  \n",
-       "10        Республика Адыгея (Адыгея)  \n",
-       "11        Республика Адыгея (Адыгея)  \n",
-       "12        Республика Адыгея (Адыгея)  \n",
-       "13        Республика Адыгея (Адыгея)  \n",
-       "14  Республика Татарстан (Татарстан)  \n",
-       "15        Республика Адыгея (Адыгея)  \n",
-       "16        Республика Адыгея (Адыгея)  \n",
-       "17        Республика Адыгея (Адыгея)  \n",
-       "18        Республика Адыгея (Адыгея)  \n",
-       "19        Республика Адыгея (Адыгея)  \n",
-       "20        Республика Адыгея (Адыгея)  \n",
-       "21        Республика Адыгея (Адыгея)  \n",
-       "22  Республика Татарстан (Татарстан)  \n",
-       "23        Республика Адыгея (Адыгея)  \n",
-       "24  Республика Татарстан (Татарстан)  \n",
-       "25        Республика Адыгея (Адыгея)  \n",
-       "26  Республика Татарстан (Татарстан)  \n",
-       "27        Республика Адыгея (Адыгея)  \n",
-       "28  Республика Татарстан (Татарстан)  \n",
-       "29        Республика Адыгея (Адыгея)  "
+       "Empty DataFrame\n",
+       "Columns: [3. Адрес МО. Наим. субъекта РФ_x, 3. Адрес МО. Наим. субъекта РФ_y, real_region_name]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +323,8 @@
    "source": [
     "df_crossregions = pd.merge(df_regions, df_regions, how='cross')\n",
     "df_crossregions['real_region_name'] = df_crossregions.apply(lambda row: region_name(row['3. Адрес МО. Наим. субъекта РФ_x'], row['3. Адрес МО. Наим. субъекта РФ_y']), axis= 1)\n",
-    "df_realregions = df_crossregions.dropna().reset_index(drop=True)\n",
-    "df_realregions.head(30)"
+    "df_realregions = df_crossregions.reset_index(drop=True)\n",
+    "df_realregions[(df_realregions['3. Адрес МО. Наим. субъекта РФ_x'] == 'Чувашская республика') & (~pd.isna(df_realregions['real_region_name']))]"
    ]
   },
   {
