--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -209,18 +209,19 @@
     "    \"\"\"преобразование строки в список, элементами которого являются\n",
     "    части строки, разбитой по неалфавитным символам. Все элементы списка\n",
     "    приведены к нижнему регистру\"\"\"\n",
-    "    str = ''\n",
+    "    str = \"\"\n",
     "    for symbol in string:\n",
-    "        symbol = symbol if symbol.isalpha() else '$'\n",
+    "        symbol = symbol if symbol.isalpha() else \"$\"\n",
     "        str = str + symbol\n",
-    "    lst = str.split('$')\n",
-    "    while '' in lst:\n",
-    "        lst.remove('')\n",
+    "    lst = str.split(\"$\")\n",
+    "    while \"\" in lst:\n",
+    "        lst.remove(\"\")\n",
     "    return [element.lower() for element in lst]\n",
     "\n",
-    "def region_name (name_1, name_2):\n",
+    "\n",
+    "def region_name(name_1, name_2):\n",
     "    \"\"\"функция возвращает правильное название региона\"\"\"\n",
-    "    ratio = len(set(words(name_1) + words(name_2)))/len(words(name_1) + words(name_2))\n",
+    "    ratio = len(set(words(name_1) + words(name_2))) / len(words(name_1) + words(name_2))\n",
     "    if ratio < 0.61 and len(name_1) > len(name_2):\n",
     "        return name_1\n",
     "    elif ratio < 0.61 and len(name_1) < len(name_2):\n",
@@ -245,9 +246,9 @@
    "source": [
     "# s_1 = 'Ханты-Мансийский автономный округ - Югра'\n",
     "# s_2 = 'Ханты-Мансийский автономный округ -Югра'\n",
-    "s_1 = 'Республика Адыгея'\n",
-    "s_2 = 'Республика Татарстан (Татарстан)'\n",
-    "res = region_name (s_1, s_2)\n",
+    "s_1 = \"Республика Адыгея\"\n",
+    "s_2 = \"Республика Татарстан (Татарстан)\"\n",
+    "res = region_name(s_1, s_2)\n",
     "print(res)"
    ]
   },
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -315,16 +316,24 @@
        "Index: []"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_crossregions = pd.merge(df_regions, df_regions, how='cross')\n",
-    "df_crossregions['real_region_name'] = df_crossregions.apply(lambda row: region_name(row['3. Адрес МО. Наим. субъекта РФ_x'], row['3. Адрес МО. Наим. субъекта РФ_y']), axis= 1)\n",
+    "df_crossregions = pd.merge(df_regions, df_regions, how=\"cross\")\n",
+    "df_crossregions[\"real_region_name\"] = df_crossregions.apply(\n",
+    "    lambda row: region_name(\n",
+    "        row[\"3. Адрес МО. Наим. субъекта РФ_x\"], row[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")\n",
     "df_realregions = df_crossregions.reset_index(drop=True)\n",
-    "df_realregions[(df_realregions['3. Адрес МО. Наим. субъекта РФ_x'] == 'Чувашская республика') & (~pd.isna(df_realregions['real_region_name']))]"
+    "df_realregions[\n",
+    "    (df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"] == \"Чувашская республика\")\n",
+    "    & (~pd.isna(df_realregions[\"real_region_name\"]))\n",
+    "]"
    ]
   },
   {
@@ -447,7 +456,12 @@
     "# ФЛК-1, 2\n",
     "\n",
     "# данные для фильтрации исходного файла\n",
-    "last_status = [\"На согласовании\", \"На редактировании (после отклонения)\", \"Запрос на отклонение\", \"Согласовано\"]\n",
+    "last_status = [\n",
+    "    \"На согласовании\",\n",
+    "    \"На редактировании (после отклонения)\",\n",
+    "    \"Запрос на отклонение\",\n",
+    "    \"Согласовано\",\n",
+    "]\n",
     "# last_status = [\"На согласовании\", \"На редактировании (после отклонения)\"]\n",
     "last_status_date = \"2020-07-10\"  # сначала год, месяц, потом число. Отчётный период начинается в 00:00 указанной даты\n",
     "next_status_date = \"2073-07-03\"  # и продолжается до 23:59 даты перед конечной\n",
